...
                              actions: [
                                TextButton(
                                  child: const Text('Abbrechen'),
                                  onPressed: () => Navigator.of(ctx).pop(),
                                ),
                                TextButton(
                                  child: const Text('Löschen'),
                                  onPressed: () {
                                    firebaseService.deleteKommentar(eintragId, kommentar.id);
                                    Navigator.of(ctx).pop();
                                  },
                                ),
                              ],
...
